Refactor Migration Invoices.